<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inbox"
            android:icon="@drawable/ic_baseline_email_24"
            android:title="@string/menu_inbox" />
        <item
            android:id="@+id/nav_draft"
            android:icon="@drawable/ic_baseline_email_24"
            android:title="@string/menu_draft" />
        <item
            android:id="@+id/nav_sent_items"
            android:icon="@drawable/ic_baseline_email_24"
            android:title="@string/menu_sent_items" />
        <item
            android:id="@+id/nav_rejected"
            android:icon="@drawable/ic_baseline_email_24"
            android:title="@string/menu_rejected" />
        <item
            android:id="@+id/nav_archive"
            android:icon="@drawable/ic_baseline_email_24"
            android:title="@string/menu_archive" />
    </group>
    <group>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_email_24"
            android:title="@string/menu_settings" />
    </group>
</menu>