<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_inbox">

    <fragment
        android:id="@+id/nav_inbox"
        android:name="dev.zeroplus.ui.home.HomeFragment"
        android:label="@string/menu_inbox"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_draft"
        android:name="dev.zeroplus.ui.gallery.GalleryFragment"
        android:label="@string/menu_draft"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_sent_items"
        android:name="dev.zeroplus.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_sent_items"
        tools:layout="@layout/fragment_slideshow" />
</navigation>